[package]
name = "leptos-blog"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.5.4", features = ["csr"] }
web-sys = "0.3"
wasm-bindgen = "0.2"
pulldown-cmark = "0.9"
gray_matter = "0.2"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite", "chrono"] }
tracing = "0.1"
url = "2.4"
scraper = "0.18"
reqwest = { version = "0.11", features = ["json"] }

[build-dependencies]
pulldown-cmark = "0.9"
gray_matter = "0.2"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }

[lib]
crate-type = ["cdylib", "rlib"]